KAS-604 Quick fix: Disabled show minutes and whitespaces in title

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -495,3 +495,7 @@ ul {
 .vlc-pill--clickable {
   cursor: pointer;
 }
+
+pre {
+  white-space: pre-line;
+}
